--- a/latihan26/index.html
+++ b/latihan26/index.html
@@ -7,7 +7,8 @@
     <title>This</title>
 </head>
 <body>
-    
+    <h1>Latihan Penggunaan This Javascript</h1>
+    <p>Jalankan program melalui Inspect Element, dan lihat output pada tab Console</p>
 
     <script src="js/script.js"></script>
 </body>
